styles/diagram/_canvasArea.scss
@use "../mixin/defaults";
@use "../mixin/zIndex";
@use "../theme/theme";

.reactodia-canvas-area {
  --reactodia-paper-panning-overlay-z-index: zIndex.$panning-overlay;

  flex: auto;
  width: 0;
  background-color: theme.$canvas-background-color;

  &__widgets {
    position: absolute;
    left: 0;
    top: 0;
  }

  &__watermark {
    background-size: cover;
    width: 8%;
    max-width: 130px;
    min-width: 50px;
    position: absolute;
    top: 15px;
    right: 25px;
    cursor: pointer;
    opacity: 0.3;
    transition: opacity theme.$transition-duration;

    &:hover {
      opacity: 0.5;
    }
  }

  &--animated {
    .reactodia-overlaid-element,
    .reactodia-element-decorations {
      transition: transform var(--reactodia-canvas-animation-duration) ease-in-out;
    }
    .reactodia-link-layer,
    .reactodia-label-layer {
      transition: none;
      opacity: 0;
    }
  }

  &--animated &__widgets {
    transition: none;
    opacity: 0;
  }
}

.reactodia-exported-watermark {
  opacity: 0.3;
  transition: opacity theme.$transition-duration;
}

.reactodia-exported-canvas {
  @include defaults.inheritable-defaults;

  *, *:before, *:after {
    box-sizing: inherit;
  }
}

.reactodia-exported-layer {
  position: absolute;
}

